--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/asset/css/style.css">
     <title>Chauss</title>
@@ -36,59 +37,55 @@
     </nav>
     <div class="container-fluid bg-rouge">
         <div class="row p-5">
-            <div class="col-6 pt-4">
+            <div class="col-lg-6 col-sm-12 pt-4">
                 <h1 class="pt-5 pb-4">Les marques pour tous !</h1>
                 <a class="btn btn-lg btn-outline-white text-light fw-bold fs-2 pe-5 ps-5 pt-2 pb-2 ms-5" href="">Nos Marques</a>
             </div>
-            <div class="col-6 pt-3 ps-5">
-                <img  class="ps-5 w-50" src="/asset/img/home.png" alt="sneakers dessiner pour home">
+            <div class="col-lg-6 col-sm-12 pt-3 ps-5">
+                <img  class="ps-5 w-75" src="/asset/img/home.png" alt="sneakers dessiner pour home">
             </div>
         </div>
     </div> 
     <div class="container-fluid bg-rougeFoncé">
         <div class="row p-5">
-            <div class="col-6 pt-3 ps-5">
+            <div class="col-lg-6 col-sm-12 pt-3 ps-5">
                 <img  class="ps-5 w-50" src="/asset/img/messi.png" alt="Leo Messi">
             </div>
-            <div class="col-6 pt-5 ps-5">
-                <h1 class="pt-5 pb-4 ps-5 text-light">Pour nos sportifs !</h1>
-                <a class="btn btn-lg btn-outline-rougeFoncé text-light fw-bold fs-2 pe-5 ps-5 pt-2 pb-2 ms-5" href="">Collection Sport</a>
+            <div class="col-lg-6 col-sm-12 pt-5 ps-5">
+                <h1 class="pt-5 pb-4 text-light">Pour nos sportifs !</h1>
+                <a class="btn btn-lg btn-outline-rougeFoncé text-light fw-bold fs-2 pe-5 ps-5 pt-2 pb-2" href="">Collection Sport</a>
             </div>            
         </div>
     </div>
     <footer>
-        <nav class="navbar navbar-expand-lg bg-noir">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-4">
-                        <a class="navbar-brand fw-bold text-light fs-3" href="#">Chauss</a>
-                    </div>
-                    <div class="col-4 ms-5">
-                        <ul class="list-group-flush">
-                            <li><a class="nav-link text-light"href="#">Accueil</a></li>
-                            <li><a class="nav-link text-light"href="#">About</a></li>
-                            <li><a class="nav-link text-light"href="#">Contact</a></li>
-                        </ul>
-                    </div>                    
-                </div>
-                <div class="row">
-                    <div class="d-flex justify-center collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link fw-bold text-light" aria-current="page" href="#"></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fw-bold text-light" href="#"></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fw-bold text-light" href="#"></a>
-                            </li>                  
-                        </ul>                                     
-                    </div>        
-                </div>
+              <a class="navbar-brand fw-bold text-light fs-3" href="#">Chauss</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarColor02">
+                <ul class="m-4">
+                  <li class="nav-item">
+                    <a class="nav-link  fw-bold text-light" href="#">Accueil</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link  fw-bold text-light" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link  fw-bold text-light" href="#">Contact</a>
+                  </li>                 
+                </ul>
+              </div>
+              <div class="d-flex">
+                <ul class="m-4">
+                    <li><a href="#"><i class='bx bxl-facebook-square' style='color:#ffffff'></i></a></li>
+                    <li><a href="#"><i class='bx bxl-instagram' style='color:#ffffff'></i></a></li>
+                    <li><a href="#"><i class='bx bxl-twitter' style='color:#ffffff'></i></a></li>
+                </ul>
+              </div>
             </div>
-
-        </nav>
+          </nav>
     </footer>
     
  
