--- a/sport.html
+++ b/sport.html
@@ -12,21 +12,21 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-rouge">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold text-light fs-3" href="#">Chauss</a>
+            <a class="navbar-brand fw-bold text-light fs-3" href="index.html">Chauss</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-light" href="index.html">Accueil</a>
+                        <a class="nav-link fw-bold text-light" aria-current="page" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-light" href="marques.html">Nos Marques</a>
+                        <a class="nav-link fw-bold text-light" aria-current="page" href="marques.html">Nos Marques</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-light" href="sport.html">Sports</a>
-                    </li                   
+                        <a class="nav-link fw-bold text-light" aria-current="page" href="sport.html">Sports</a>
+                    </li>                   
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-light" href="#">Contact</a>
                     </li>                  
@@ -38,28 +38,26 @@
             </div>        
         </div>
     </nav>
-    <div class="container-fluid bg-rouge">
-        <div class="row p-5">
-            <div class="col-lg-6 col-sm-12 pt-4">
-                <h1 class="pt-5 pb-4">Les marques pour tous !</h1>
-                <a class="btn btn-lg btn-outline-white text-light fw-bold fs-2 pe-5 ps-5 pt-2 pb-2 ms-5" href="marques.html">Nos Marques</a>
+    <section class="bg-rouge">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-sm-12 mt-5">
+                    <a class="btn btn-lg btn-outline-white text-light fw-bold fs-2 pe-5 ps-5 pt-5 pb-5 m-5" href="#"><img  class="w-75 mt-5" src="/asset/img/foot.png" alt="Foot"></a>
+                </div>
+                <div class="col-lg-6 col-sm-12 mt-5">
+                    <a class="btn btn-lg btn-outline-white text-light fw-bold fs-2 pe-5 ps-5 pt-5 pb-5 m-5" href="#"><img  class="w-100 mt-5" src="/asset/img/basket.png" alt="Basket"></a>
+                </div>
             </div>
-            <div class="col-lg-6 col-sm-12 pt-3 ps-5">
-                <img  class="ps-5 w-75" src="/asset/img/home.png" alt="sneakers dessiner pour home">
+            <div class="row">
+                <div class="col-lg-6 col-sm-12 mt-5">
+                    <a class="btn btn-lg btn-outline-white text-light fw-bold fs-2 pe-5 ps-5 pt-5 pb-5 m-5" href="#"><img  class="w-75 mt-5" src="/asset/img/tennis.png" alt="Tennis"></a>
+                </div>
+                <div class="col-lg-6 col-sm-12 mt-5">
+                    <a class="btn btn-lg btn-outline-white text-light fw-bold fs-2 pe-5 ps-5 pt-5 pb-5 m-5" href="#"><img  class="w-87 mt-5" src="/asset/img/course.png" alt="Course"></a>
+                </div>
             </div>
-        </div>
-    </div> 
-    <div class="container-fluid bg-rougeFoncé">
-        <div class="row p-5">
-            <div class="col-lg-6 col-sm-12 pt-3 ps-5">
-                <img  class="ps-5 w-50" src="/asset/img/messi.png" alt="Leo Messi">
-            </div>
-            <div class="col-lg-6 col-sm-12 pt-5 ps-5">
-                <h1 class="pt-5 pb-4 text-light">Pour nos sportifs !</h1>
-                <a class="btn btn-lg btn-outline-rougeFoncé text-light fw-bold fs-2 pe-5 ps-5 pt-2 pb-2" href="sport.html">Collection Sport</a>
-            </div>            
-        </div>
-    </div>
+        </div>       
+    </section>
     <footer class="bg-dark">
         <div class="container-fluid">
             <div class="row">
@@ -70,7 +68,7 @@
                     <ul>
                         <li>
                             <a class="nav-link fw-bold text-light" href="index.html">Accueil</a>
-                        </li>                       
+                        </li>                        
                         <li>
                             <a class="nav-link fw-bold text-light" href="marques.html">Nos Marques</a>
                         </li>
@@ -82,10 +80,7 @@
                         </li>
                     </ul>
                 </div>                
-            </div>
-            <div class="row">
-                
-            </div>
+            </div>            
         </div>
     </footer>
     
@@ -95,6 +90,6 @@
 
 
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>  
 </body>
 </html>
