--- a/marques.html
+++ b/marques.html
@@ -22,10 +22,10 @@
                         <a class="nav-link fw-bold text-light" aria-current="page" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-light" aria-current="page" href="#">Nos Marques</a>
+                        <a class="nav-link fw-bold text-light" aria-current="page" href="marques.html">Nos Marques</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-light" aria-current="page" href="#">Sports</a>
+                        <a class="nav-link fw-bold text-light" aria-current="page" href="sport.html">Sports</a>
                     </li>                   
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-light" href="#">Contact</a>
@@ -67,13 +67,13 @@
                 <div class="col-lg-5 mt-3 mb-3">
                     <ul>
                         <li>
-                            <a class="nav-link fw-bold text-light" href="#">Accueil</a>
+                            <a class="nav-link fw-bold text-light" href="index.html">Accueil</a>
                         </li>                        
                         <li>
-                            <a class="nav-link fw-bold text-light" href="#">Nos Marques</a>
+                            <a class="nav-link fw-bold text-light" href="marques.html">Nos Marques</a>
                         </li>
                         <li>
-                            <a class="nav-link fw-bold text-light" href="#">Sports</a>
+                            <a class="nav-link fw-bold text-light" href="sport.html">Sports</a>
                         </li>
                         <li>
                             <a class="nav-link fw-bold text-light" href="#">Contact</a>
@@ -85,13 +85,8 @@
 
             </div>
         </div>
-    </footer>
+    </footer> 
     
- 
-    
-
-
-
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>  
 </body>
