--- a/sport.html
+++ b/sport.html
@@ -19,13 +19,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-light" aria-current="page" href="index.html">Accueil</a>
+                        <a class="nav-link fw-bold text-light" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-light" aria-current="page" href="marques.html">Nos Marques</a>
+                        <a class="nav-link fw-bold text-light" href="marques.html">Nos Marques</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-light" aria-current="page" href="sport.html">Sports</a>
+                        <a class="nav-link fw-bold text-light" href="sport.html">Sports</a>
                     </li>                   
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-light" href="#">Contact</a>
