--- a/inscription.html
+++ b/inscription.html
@@ -41,7 +41,7 @@
     <section>
         <div>
             <div class="d-flex justify-content-center text-light pt-5 pb-5">
-                <div class="inline-block shadow-lg bg-rouge pad-20 m-2">
+                <div class="inline-block shadow-lg bg-rouge p-5 col-lg-4 col-sm-8 m-2">
                     <form>
                         <fieldset>
                           <legend class="fw-bold d-flex justify-content-center fs-1">S'inscrire</legend>                          
