--- a/inscription.html
+++ b/inscription.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-rouge">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold text-light fs-3" href="#">Chauss</a>
+            <a class="navbar-brand fw-bold text-light fs-3" href="index.html">Chauss</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -23,27 +23,24 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-light" href="marques.html">Nos Marques</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-bold text-light" href="">Sports</a>
-                    </li>                  
+                    </li>                                  
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-light" href="#">Contact</a>
                     </li>                  
                 </ul>
                 <div class="d-flex">
-                    <a class="btn btn-light text-rouge me-2 fw-bold" href="#">Connexion</a>
-                    <a class="btn btn-light text-rouge fw-bold" href="#">Inscription</a>
+                    <a class="btn btn-light text-rouge me-2 fw-bold" href="connexion.html">Connexion</a>
+                    <a class="btn btn-light text-rouge fw-bold" href="inscription.html">Inscription</a>
                 </div>              
             </div>        
         </div>
     </nav>
     <section>
-        <div>
+        <div class="container-fluid">
             <div class="d-flex justify-content-center text-light pt-5 pb-5">
                 <div class="inline-block shadow-lg bg-rouge p-5 col-lg-4 col-sm-8 m-2">
                     <form>
-                        <fieldset>
+                        <fieldset class="mt-4 mb-4">
                           <legend class="fw-bold d-flex justify-content-center fs-1">S'inscrire</legend>                          
                           <div class="form-group">
                             <label for="nom" class="form-label mt-4">Nom :</label>
@@ -75,31 +72,26 @@
                           </div>                                                
                           <button type="submit" class="btn btn-light mt-5">Valider</button>
                         </fieldset>
-                    </form>                      
+                    </form>
+                    <a href="connexion.html" class="nav-link fw-bold text-light">Se connecter</a>                     
                 </div>
             </div>
         </div>
-    </section>
-       
-    </div>
-    
+    </section>    
     <footer class="bg-dark">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-1 m-5">
                     <a class="navbar-brand fw-bold text-light fs-3" href="index.html">Chauss</a>
                 </div>
-                <div class="col-lg-5 mt-3 mb-3">
+                <div class="col-lg-5 mt-4 mb-3">
                     <ul>
                         <li>
                             <a class="nav-link fw-bold text-light" href="index.html">Accueil</a>
                         </li>                       
                         <li>
                             <a class="nav-link fw-bold text-light" href="marques.html">Nos Marques</a>
-                        </li>
-                        <li>
-                            <a class="nav-link fw-bold text-light" href="">Sports</a>
-                        </li>
+                        </li>                        
                         <li>
                             <a class="nav-link fw-bold text-light" href="#">Contact</a>
                         </li>
