--- a/profil.html
+++ b/profil.html
@@ -12,18 +12,18 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-rouge">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold text-light fs-3" href="index.html">Chauss</a>
+            <a class="navbar-brand fw-bold text-light fs-3" href="#">Chauss</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-light" aria-current="page" href="index.html">Accueil</a>
+                        <a class="nav-link fw-bold text-light" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-light" aria-current="page" href="marques.html">Nos Marques</a>
-                    </li>                                   
+                        <a class="nav-link fw-bold text-light" href="marques.html">Nos Marques</a>
+                    </li>                                    
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-light" href="#">Contact</a>
                     </li>                  
@@ -35,27 +35,38 @@
             </div>        
         </div>
     </nav>
-    <section class="bg-rouge">
+    <section class="m-5">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6 col-sm-12 mt-5">
-                    <a class="btn btn-lg btn-outline-white text-light fw-bold fs-2 pe-5 ps-5 pt-5 pb-5 m-5" href="#"><img  class="w-82 mt-5" src="/asset/img/nike.png" alt="Logo Nike"></a>
+            <div class="d-flex justify-content-center text-light pt-5 pb-5">
+                <div class="inline-block shadow-lg bg-rouge p-5 col-lg-6 col-sm-6 m-2 mt-5 mb-5">
+                    <div class="row mt-5 mb-5">
+                        <div class="col-lg-6 col-sm-12">
+                            <img class="w-50" src="/asset/img/user.png" alt="User profil">
+                        </div>
+                        <div class="col-lg-6 col-sm-12">
+                            <div class="pt-3">
+                                <span class="fw-bold">Nom :</span>
+                                <span>Lagant</span>
+                            </div>
+                            <div class="pt-3">
+                                <span class="fw-bold">Prénom :</span>
+                                <span>Lucas</span>
+                            </div>
+                            <div class="pt-3">
+                                <span class="fw-bold">Email :</span>
+                                <span>lucaslagant@gmail.com</span>
+                            </div>
+                            <div class="pt-3">
+                                <a href="#" class="btn btn-light">Déconnexion</a>
+                                <a href="#" class="btn btn-light">Modifier</a>
+                            </div>
+                        </div>
+                    </div>                
                 </div>
-                <div class="col-lg-6 col-sm-12 mt-5">
-                    <a class="btn btn-lg btn-outline-white text-light fw-bold fs-2 pe-5 ps-5 pt-5 pb-5 m-5" href="#"><img  class="w-50 mt-5" src="/asset/img/adidas.png" alt="Logo Adidas"></a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 col-sm-12 mt-5">
-                    <a class="btn btn-lg btn-outline-white text-light fw-bold fs-2 pe-5 ps-5 pt-5 pb-5 m-5" href="#"><img  class="w-75 mt-5" src="/asset/img/puma.png" alt="Logo Puma"></a>
-                </div>
-                <div class="col-lg-6 col-sm-12 mt-5">
-                    <a class="btn btn-lg btn-outline-white text-light fw-bold fs-2 pe-5 ps-5 pt-5 pb-5 m-5" href="#"><img  class="w-87 mt-5" src="/asset/img/newBalance.png" alt="Logo New Balance"></a>
-                </div>
-            </div>
-        </div>       
-    </section>
-    <footer class="bg-dark">
+            </div>            
+        </div>
+    </section>      
+    <footer class="bg-dark fixed-bottom">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-1 m-5">
@@ -76,8 +87,8 @@
                 </div>                
             </div>
         </div>
-    </footer>     
+    </footer>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
