--- a/index.html
+++ b/index.html
@@ -23,16 +23,13 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-light" href="marques.html">Nos Marques</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-bold text-light" href="">Sports</a>
-                    </li>                  
+                    </li>                                  
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-light" href="#">Contact</a>
                     </li>                  
                 </ul>
                 <div class="d-flex">
-                    <a class="btn btn-light text-rouge me-2 fw-bold" href="#">Connexion</a>
+                    <a class="btn btn-light text-rouge me-2 fw-bold" href="connexion.html">Connexion</a>
                     <a class="btn btn-light text-rouge fw-bold" href="inscription.html">Inscription</a>
                 </div>              
             </div>        
@@ -66,17 +63,14 @@
                 <div class="col-lg-1 m-5">
                     <a class="navbar-brand fw-bold text-light fs-3" href="index.html">Chauss</a>
                 </div>
-                <div class="col-lg-5 mt-3 mb-3">
+                <div class="col-lg-5 mt-4 mb-3">
                     <ul>
                         <li>
                             <a class="nav-link fw-bold text-light" href="index.html">Accueil</a>
                         </li>                       
                         <li>
                             <a class="nav-link fw-bold text-light" href="marques.html">Nos Marques</a>
-                        </li>
-                        <li>
-                            <a class="nav-link fw-bold text-light" href="">Sports</a>
-                        </li>
+                        </li>                        
                         <li>
                             <a class="nav-link fw-bold text-light" href="#">Contact</a>
                         </li>
@@ -84,13 +78,7 @@
                 </div>                
             </div>
         </div>
-    </footer>
-    
- 
-    
-
-
-
+    </footer>  
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
